--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nocturnia - O RPG das Sombras Eternas</title>
 
-<link rel="manifest" href="/manifest.json">
+<link rel="nocturnia" href="/nocturnia.png">
 <meta name="theme-color" content="#FFD700">
 <script src="https://cdn.tailwindcss.com"></script>
 
